Increase size of sample text in third article to test how it deals with displaying longer articles

--- a/app/assets/templates/articles/three.html.erb
+++ b/app/assets/templates/articles/three.html.erb
@@ -7,3 +7,9 @@
   <li>Lorem ipsum dolor sit amet.</li>
   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis.</li>
 </ul>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, ad explicabo eligendi quibusdam officia, suscipit recusandae blanditiis quisquam iure voluptate. Nulla ut beatae officiis nam, voluptate nesciunt cupiditate illo qui.</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, ad explicabo eligendi quibusdam officia, suscipit recusandae blanditiis quisquam iure voluptate. Nulla ut beatae officiis nam, voluptate nesciunt cupiditate illo qui.</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium placeat, dicta aliquid fugiat, obcaecati nisi illum repellat nesciunt reiciendis nihil est, qui alias, perspiciatis accusantium libero mollitia quas aspernatur totam animi. Dignissimos unde eaque quam modi, dolores provident quaerat dolorem explicabo veniam. Doloribus illo, nostrum, ratione perspiciatis ut repellendus, quasi sint inventore et facere consequatur debitis eveniet hic deserunt earum vitae nihil cumque dignissimos porro voluptatibus modi. Porro, aspernatur a illo consequatur, commodi ab. Sint ad quia, iusto sapiente omnis recusandae, optio distinctio repellat odio nemo, tenetur voluptas perferendis quisquam qui alias quidem praesentium earum facere expedita? Hic quis ducimus atque beatae voluptatum aut dignissimos enim, temporibus voluptatibus excepturi esse officia repellendus libero consectetur qui, doloribus autem ipsum veniam in odio non recusandae! Odit maiores laudantium accusamus libero eaque! Porro asperiores sed nostrum in? Aperiam eveniet nam voluptates, dolore maxime soluta ratione, delectus quod, nulla, illum officia maiores ab labore?</p>
